<resources>
    <string name="app_name">QuizHP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="background">fundo da tela</string>
    <string name="logoharrypotter">Harry Potter</string>
    <string name="logoquiz">Quiz</string>
    <string name="nome">Digite seu nome</string>
    <string name="iniciar">Iniciar</string>
    <string name="enviarperguntas">Próxima</string>
    <string name="fotopergunta1">Foto de uma Horcrux</string>
    <string name="pergunta1">1- Quantas horcruxes Voldemort teve?</string>
    <string name="pergunta1a">6</string>
    <string name="pergunta1b">7</string>
    <string name="pergunta1c">8</string>
    <string name="pergunta1d">9</string>
    <string name="fotopergunta2">Foto de um dragão</string>
    <string name="pergunta2">2- Qual dragão Harry lutou no “Cálice de fogo”?</string>
    <string name="pergunta2a">Rabo-Córneo Húngaro</string>
    <string name="pergunta2b">Meteoro-Chinês</string>
    <string name="pergunta2c">Focinho-Curto Sueco</string>
    <string name="pergunta2d">Verde-galês-Comum</string>
    <string name="fotopergunta3">Foto do Harry Potter e da Gina</string>
    <string name="pergunta3">3- Quais são os nomes dos filhos do Harry Potter com a Gina?</string>
    <string name="pergunta3a">Tiago Potter, Alvo Sirius e Luna Lily</string>
    <string name="pergunta3b">Tiago Sirius, Alvo Severo e Lily Luna</string>
    <string name="pergunta3c">Tiago Potter, Alvo Potter e Gina Lily</string>
    <string name="pergunta3d">Tiago Severo, Alvo Potter e Lily Luna</string>
    <string name="fotopergunta4">Foto da Murta</string>
    <string name="pergunta4">4- Qual o nome da aluna morta na primeira vez em que a câmara secreta foi aberta?</string>
    <string name="pergunta4a">Murta Warner</string>
    <string name="pergunta4b">Murta Warren</string>
    <string name="pergunta4c">Murta Wesker</string>
    <string name="pergunta4d">Murta Wilbur</string>
    <string name="fotopergunta5">Foto do Cornélio Fudge</string>
    <string name="pergunta5">5- Quem é o sucessor do ministro Cornélio Fudge?</string>
    <string name="pergunta5a">Ralf Scrimgeour</string>
    <string name="pergunta5b">Pio Thicknesse</string>
    <string name="pergunta5c">Rufo Scrimgeour</string>
    <string name="pergunta5d">Quim Shacklebolt</string>
    <string name="fotopergunta6">Foto da Tonks e do Lupin</string>
    <string name="pergunta6">6- Qual o nome do filho da Tonks com Lupin?</string>
    <string name="pergunta6a">Thales Lupin</string>
    <string name="pergunta6b">Teo Lupin</string>
    <string name="pergunta6c">Thiago Lupin</string>
    <string name="pergunta6d">Ted Lupin</string>
    <string name="fotopergunta7">Foto de um jogo do Harry Potter</string>
    <string name="pergunta7">7- Qual desses feitiços surgiu nos videogames da franquia e o que ele faz?</string>
    <string name="pergunta7a">Estupefaça, arremessa o oponente longe</string>
    <string name="pergunta7b">Flipendo, arremessa o oponente longe</string>
    <string name="pergunta7c">Flipendo, faz o oponente escorregar</string>
    <string name="pergunta7d">Estupefaça, faz o oponente escorregar e move objetos</string>
    <string name="fotopergunta8">Foto do Dumbledore</string>
    <string name="pergunta8">8- Qual o nome completo do Dumbledore?</string>
    <string name="pergunta8a">Alvo Percival Wulfrico Brian Dumbledore</string>
    <string name="pergunta8b">Alvo John Brian Dumbledore</string>
    <string name="pergunta8c">Alvo Percival Brian Dumbledore</string>
    <string name="pergunta8d">Alvo Brian Percival Dumbledore</string>
    <string name="fotopergunta9">Foto do Argo Filch</string>
    <string name="pergunta9">9- Por que Argo Filch, o zelador, não consegue fazer magia?</string>
    <string name="pergunta9a">Porque ele não quer</string>
    <string name="pergunta9b">Porque ele perdeu os poderes</string>
    <string name="pergunta9c">Porque ele é um aborto</string>
    <string name="pergunta9d">Porque ele odeia os bruxos</string>
    <string name="fotopergunta10">Foto do Frei-Gorducho</string>
    <string name="pergunta10">10- O Frei-Gorducho era fantasma de qual casa de Hogwarts?</string>
    <string name="pergunta10a">Grifinória</string>
    <string name="pergunta10b">Lufa-Lufa</string>
    <string name="pergunta10c">Corvinal</string>
    <string name="pergunta10d">Sonserina</string>
    <string name="parabens">Parabéns</string>
    <string name="resultadoNome">nome</string>
    <string name="resultado">mensagem</string>
    <string name="resultadoPontos">pontos</string>
    <string name="wikia">visitar a página da wikia</string>



</resources>