<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pergunta5Fragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewPergunta5"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:contentDescription="@string/fotopergunta5"
            android:src="@drawable/pergunta5" />

        <TextView
            android:id="@+id/textViewPergunta5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pergunta5"
            android:textColor="@color/purple_500"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroupPergunta5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioButtonPergunta5A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pergunta5a" />

            <RadioButton
                android:id="@+id/radioButtonPergunta5B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pergunta5b" />

            <RadioButton
                android:id="@+id/radioButtonPergunta5C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pergunta5c" />

            <RadioButton
                android:id="@+id/radioButtonPergunta5D"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pergunta5d" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonPergunta5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enviarperguntas" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>