<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pergunta6Fragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewPergunta6"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:contentDescription="@string/fotopergunta6"
            android:src="@drawable/pergunta6" />

        <TextView
            android:id="@+id/textViewPergunta6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pergunta6"
            android:textColor="@color/purple_500"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroupPergunta6"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioButtonPergunta6A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pergunta6a" />

            <RadioButton
                android:id="@+id/radioButtonPergunta6B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pergunta6b" />

            <RadioButton
                android:id="@+id/radioButtonPergunta6C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pergunta6c" />

            <RadioButton
                android:id="@+id/radioButtonPergunta6D"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pergunta6d" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonPergunta6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enviarperguntas" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>