<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pergunta7Fragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewPergunta7"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:contentDescription="@string/fotopergunta7"
            android:src="@drawable/pergunta7" />

        <TextView
            android:id="@+id/textViewPergunta7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pergunta7"
            android:textColor="@color/purple_500"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroupPergunta7"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioButtonPergunta7A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pergunta7a" />

            <RadioButton
                android:id="@+id/radioButtonPergunta7B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pergunta7b" />

            <RadioButton
                android:id="@+id/radioButtonPergunta7C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pergunta7c" />

            <RadioButton
                android:id="@+id/radioButtonPergunta7D"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pergunta7d" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonPergunta7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enviarperguntas" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>