<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout9"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pergunta8Fragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewPergunta8"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/fotopergunta8"
            android:src="@drawable/pergunta8" />

        <TextView
            android:id="@+id/textViewPergunta8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pergunta8"
            android:textColor="@color/purple_500"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroupPergunta8"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioButtonPergunta8A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pergunta8a" />

            <RadioButton
                android:id="@+id/radioButtonPergunta8B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pergunta8b" />

            <RadioButton
                android:id="@+id/radioButtonPergunta8C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pergunta8c" />

            <RadioButton
                android:id="@+id/radioButtonPergunta8D"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pergunta8d" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonPergunta8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enviarperguntas" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>