<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout11"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pergunta10Fragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewPergunta10"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:contentDescription="@string/fotopergunta10"
            android:src="@drawable/pergunta10" />

        <TextView
            android:id="@+id/textViewPergunta10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pergunta10"
            android:textColor="@color/purple_500"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroupPergunta10"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioButtonPergunta10A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pergunta10a" />

            <RadioButton
                android:id="@+id/radioButtonPergunta10B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pergunta10b" />

            <RadioButton
                android:id="@+id/radioButtonPergunta10C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pergunta10c" />

            <RadioButton
                android:id="@+id/radioButtonPergunta10D"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pergunta10d" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonPergunta10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enviarperguntas" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>