<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <ImageView
        android:id="@+id/imageViewFundoHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:src="@drawable/fundohome" />

    <ImageView
        android:id="@+id/imageViewHarryPotter"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:contentDescription="@string/logoharrypotter"
        android:src="@drawable/harrypotter" />

    <ImageView
        android:id="@+id/imageViewQuiz"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="110dp"
        android:contentDescription="@string/logoquiz"
        android:src="@drawable/quiz" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#B3FFFFFF">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nome"
                android:inputType="textPersonName"
                android:textColorHint="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonIniciar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iniciar" />
        </TableRow>

    </TableLayout>

</FrameLayout>